--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -1,5 +1,7 @@
 .article-list {
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     gap: 20px;
     padding: 20px 0;
     width: 100%;
